developer1/src/objects/Scheme_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Age__c</fullName>
        <label>Maximum Age</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Age__c</fullName>
        <label>Minimum Age</label>
        <picklist>
            <picklistValues>
                <fullName>18</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Rule__c</fullName>
        <label>Scheme Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Scheme Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheme Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>